tests/snapshots/run_wpt_conformance__trtx_greater_float16_5D_inputs_with_alternating_broadcast_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "greater.https.any.js",
    "greater float16 5D inputs with alternating broadcast axes",
    "trtx",
    Failed {
        msg: Some(
            "greater :: greater float16 5D inputs with alternating broadcast axes: index 8: actual=0 expected=1 tolerance=0\n  inputs: inputB: [1, 1, 0, 0]; inputA: [1, 0, 1, 0, 1, 0, 1, 0]\n  expected output: [0, 0, 0, 0, 0, 0, 0, 0, 1, 0 ...] (len=32)\n  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=32)\n  expected output full nd:\n[0, 0, 0, 0, 0, 0, 0, 0, 1, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])\n  actual output full nd:\n[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[2, 1, 2, 1, 2];\n    inputB: f16[1, 2, 1, 2, 1];\n  }\n\n  nodes {\n    [output] = greater(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
