tests/snapshots/run_wpt_conformance__trtx_greater_float16_broadcast_0D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "greater.https.any.js",
    "greater float16 broadcast 0D to 4D",
    "trtx",
    Failed {
        msg: Some(
            "greater :: greater float16 broadcast 0D to 4D: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputB: [-5.39453125, -7.1875, -3.107421875, 4.9765625, 5.11328125, -1.5390625, 1.4140625, -0.93603515625, -6.03125, -3.013671875, 0.1708984375, 7.39453125, 7.1796875, -4.828125, -2.01953125, -3.267578125, 8.9453125, -5.93359375, 0.70703125, 2.77734375, 0.97900390625, -6.25390625, 4.41015625, -6.7734375]; inputA: [6.22265625]\n  expected output: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ...] (len=24)\n  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=24)\n  expected output full nd:\n[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...] (len=24, shape=[2, 2, 2, 3])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[];\n    inputB: f16[2, 2, 2, 3];\n  }\n\n  nodes {\n    [output] = greater(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
