tests/snapshots/run_wpt_conformance__trtx_greater_float16_broadcasting_two_5D_inputs_with_a_leading_batch_size_of_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "greater.https.any.js",
    "greater float16 broadcasting two 5D inputs with a leading batch size of 1",
    "trtx",
    Failed {
        msg: Some(
            "greater :: greater float16 broadcasting two 5D inputs with a leading batch size of 1: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputB: [0, 1, 2, 8, 0, 255]; inputA: [255, 0, 1, 8]\n  expected output: [1, 1, 1, 0, 0, 0, 0, 1, 0, 0 ...] (len=12)\n  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=12)\n  expected output full nd:\n[1, 1, 1, 0, 0, 0, 0, 1, 0, 0, ...] (len=12, shape=[1, 2, 2, 1, 3])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=12, shape=[1, 2, 2, 1, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[1, 2, 2, 1, 1];\n    inputB: f16[1, 2, 1, 1, 3];\n  }\n\n  nodes {\n    [output] = greater(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
